tests/baselines/reference/privateVisibility.errors.txt
tests/cases/compiler/privateVisibility.ts(9,1): error TS2341: Property 'Foo.privMeth' is inaccessible.
tests/cases/compiler/privateVisibility.ts(10,1): error TS2341: Property 'Foo.privProp' is inaccessible.
tests/cases/compiler/privateVisibility.ts(24,1): error TS2341: Property 'M.C.priv' is inaccessible.


==== tests/cases/compiler/privateVisibility.ts (3 errors) ====
    class Foo {
    	public pubMeth() {this.privMeth();}
    	private privMeth() {}
    	public pubProp = 0;
    	private privProp = 0;
    }
    
    var f = new Foo();
    f.privMeth(); // should not work
    ~~~~~~~~~~
!!! error TS2341: Property 'Foo.privMeth' is inaccessible.
    f.privProp; // should not work
    ~~~~~~~~~~
!!! error TS2341: Property 'Foo.privProp' is inaccessible.
    
    f.pubMeth(); // should work
    f.pubProp; // should work
    
    module M {
        export class C { public pub = 0; private priv = 1; }
        export var V = 0;
    }
    
    
    var c = new M.C();
    
    c.pub; // should work
    c.priv; // should not work
    ~~~~~~
!!! error TS2341: Property 'M.C.priv' is inaccessible.
    
    